# ESP32-S3-ePaper-13.3E6

./: README.md
SD卡文件/HTML/AP/: index.html
SD卡文件/HTML/STA/: index.html  script.min.js  styles.min.css
SD卡文件/img/: config.txt  fileList.txt
example/Arduino-3.2.0/examples/01_ADC_Test/: 01_ADC_Test.ino  adc_bsp.cpp
example/Arduino-3.2.0/examples/02_Audio_out/: 02_Audio_out.ino
example/Arduino-3.2.0/examples/03_E-Paper_Example/: 03_E-Paper_Example.ino  EPD_13in3e.cpp  ImageData.h
example/ESP-IDF-5.5.1/01_ADC_Test/: CMakeLists.txt  sdkconfig  sdkconfig.old
example/ESP-IDF-5.5.1/06_xiaozhi-esp32/: CMakeLists.txt  README.md  sdkconfig.defaults
example/ESP-IDF-5.5.1/06_xiaozhi-esp32/components/app_bsp/: CMakeLists.txt  ai_app.cpp  ai_app.h  client_app.c  client_app.h  imgdecode_app.cpp  imgdecode_app.h  memory_manager.c  memory_manager.h  server_app.cpp  server_app.h  weather_app.cpp  weather_app.h
example/ESP-IDF-5.5.1/06_xiaozhi-esp32/components/app_bsp/certs/: ark_vol.pem  volces_chain.pem
example/ESP-IDF-5.5.1/06_xiaozhi-esp32/components/app_bsp/jpg_src/: test_decoder.c  test_decoder.h
example/ESP-IDF-5.5.1/06_xiaozhi-esp32/components/app_bsp/json_inc/: ArduinoJson.h
example/ESP-IDF-5.5.1/06_xiaozhi-esp32/components/app_bsp/list_src/: list_node.c
example/ESP-IDF-5.5.1/06_xiaozhi-esp32/components/port_bsp/: CMakeLists.txt  button_bsp.c  button_bsp.h  codec_bsp.cpp  codec_bsp.h  display_bsp.cpp  display_bsp.h  i2c_equipment.cpp  i2c_equipment.h  i2c_equipment_rtc.cpp  i2c_equipment_rtc.h  led_bsp.c  led_bsp.h  pcf85063_bsp.c  pcf85063_bsp.h  sdcard_bsp.cpp  sdcard_bsp.h  traverse_nvs.cpp  traverse_nvs.h
example/ESP-IDF-5.5.1/06_xiaozhi-esp32/components/port_bsp/pcm_src/: mode.pcm  mode_1.pcm  mode_2.pcm  mode_3.pcm
example/ESP-IDF-5.5.1/06_xiaozhi-esp32/components/port_bsp/src/fonts/: font14CN.c  font18CN.c  font22CN.c  fonts.h
example/ESP-IDF-5.5.1/06_xiaozhi-esp32/components/user_app_bsp/: CMakeLists.txt  user_app.cpp  user_app.h
example/ESP-IDF-5.5.1/06_xiaozhi-esp32/components/user_app_bsp/mode_src/: Basic_mode.cpp  Mode_Selection.cpp  Network_mode.cpp  xiaozhi_mode.cpp
(+61 files in other folders)
